feat(index.html, _layout.scss): add headers with and without goback icon and style accordingly to enhance layout and navigation, implement styling for new header structure to maintain consistency across views

--- a/index.html
+++ b/index.html
@@ -7,7 +7,40 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- Sans goback -->
+    <header class="header">
+      <div class="header-container">
+        <div class="logo-container">
+          <img src="images/ohmyfood.svg" alt="Logo of Ohmyfood" />
+        </div>
+      </div>
+    </header>
+
+    <!-- Avec goback -->
+    <header class="header">
+      <div class="header-container header-container--with-goback">
+        <div class="goback-container">
+          <img src="images/GoBack.svg" alt="GoBack icon" />
+        </div>
+        <div class="logo-container">
+          <img src="images/ohmyfood.svg" alt="Logo of Ohmyfood" />
+        </div>
+      </div>
+    </header>
+    <!-- Avec goback -->
     <header class="header header--with-location">
+      <div class="header-container header-container--with-goback">
+        <div class="goback-container">
+          <img src="images/GoBack.svg" alt="GoBack icon" />
+        </div>
+        <div class="logo-container">
+          <img src="images/ohmyfood.svg" alt="Logo of Ohmyfood" />
+        </div>
+      </div>
+      <div class="location-container">
+        <img src="images/Pin.svg" alt="Location icon" />
+        <p>Paris, Belleville</p>
+      </div>
     </header>
     <main>
       <section>
