--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
     </header>
     <main>
       <section>
-        <h2>Bienvenue sur Ohmyfood</h2>
+        <h1>Réservez le menu qui vous convient vous convient</h1>
         <p>
-          Ohmyfood est une jeune startup qui souhaite s'imposer sur le marché de
-          la restauration. L'objectif est de développer un site 100% mobile qui
-          répertorie les menus de restaurants gastronomiques.
+          Découvrez des restaurants d’exception, sélectionnés par nos soins.
         </p>
+        <button class="btn-primary">Explorez les menus</button>
       </section>
     </main>
     <footer>
