--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <!-- Sans goback -->
+    <!-- Sans goback 
     <header class="header">
       <div class="header-container">
         <div class="logo-container">
           <img src="images/ohmyfood.svg" alt="Logo of Ohmyfood" />
         </div>
       </div>
-    </header>
+    </header>-->
 
-    <!-- Avec goback -->
+    <!-- Avec goback 
     <header class="header">
       <div class="header-container header-container--with-goback">
         <div class="goback-container">
@@ -26,7 +26,7 @@
           <img src="images/ohmyfood.svg" alt="Logo of Ohmyfood" />
         </div>
       </div>
-    </header>
+    </header>-->
     <!-- Avec goback -->
     <header class="header header--with-location">
       <div class="header-container header-container--with-goback">
