--- a/index.html
+++ b/index.html
@@ -43,12 +43,17 @@
       </div>
     </header>
     <main>
-      <section>
-        <h1>Réservez le menu qui vous convient vous convient</h1>
-        <p>
-          Découvrez des restaurants d’exception, sélectionnés par nos soins.
-        </p>
-        <button class="btn-primary">Explorez les menus</button>
+      <section class="section-hero">
+        <div class="section-hero--container">
+          <div class="section-hero--container--title">
+            <h1 class="title">Réservez le menu qui vous convient</h1>
+          </div>
+          <p class="subtitle">
+            Découvrez des restaurants d'exception, sélectionnés par nos soins.
+          </p>
+        </div>
+        <button class="btn-primary">Explorer nos restaurants</button>
+      </section>
       </section>
     </main>
     <footer>
