feat: add 'Fonctionnement' section to index.html and corresponding styles in _layout.scss to enhance the webpage content and structure

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         </div>
         <button class="btn-primary">Explorer nos restaurants</button>
       </section>
+      <section class="section-fonctionnement">
+        <h2 class="title">Fonctionnement</h2>
       </section>
     </main>
     <footer>
