feat(index.html): add step-by-step guide section to improve user onboarding experience
style(components.scss): add styles for step components to enhance visual appearance

style(layout.scss): create flex container for steps to facilitate layout management

--- a/index.html
+++ b/index.html
@@ -56,6 +56,32 @@
       </section>
       <section class="section-fonctionnement">
         <h2 class="title">Fonctionnement</h2>
+        <div class="steps-container">
+          <div class="step">
+            <div class="step-number">1</div>
+            <div class="step-content">
+              <img
+                src="images/mobile-screen-button.svg"
+                alt="Choisir un restaurant"
+              />
+              <span>Choisissez un restaurant</span>
+            </div>
+          </div>
+          <div class="step">
+            <div class="step-number">2</div>
+            <div class="step-content">
+              <img src="images/list-ul.svg" alt="Choisir un restaurant" />
+              <span>Composez votre menu</span>
+            </div>
+          </div>
+          <div class="step">
+            <div class="step-number">3</div>
+            <div class="step-content">
+              <img src="images/store.svg" alt="Choisir un restaurant" />
+              <span>Dégustez au restaurant</span>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer>
