feat: Add 'Restaurants' section to index.html and corresponding styles in _layout.scss for improved webpage content and structure

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
           </div>
         </div>
       </section>
+      <section class="section-restaurants">
+        <h2 class="title">Restaurants</h2>
+      </section>
     </main>
     <footer>
       <p>&copy; 2021 Ohmyfood. Tous droits réservés.</p>
