refactor: update image paths to use icons directory for GoBack, Pin, list-ul, mobile-screen-button, and store icons

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     <header class="header header--with-location">
       <div class="header-container header-container--with-goback">
         <div class="goback-container">
-          <img src="images/GoBack.svg" alt="GoBack icon" />
+          <img src="images/icons/GoBack.svg" alt="GoBack icon" />
         </div>
         <div class="logo-container">
           <img src="images/ohmyfood.svg" alt="Logo of Ohmyfood" />
         </div>
       </div>
       <div class="location-container">
-        <img src="images/Pin.svg" alt="Location icon" />
+        <img src="images/icons/Pin.svg" alt="Location icon" />
         <p>Paris, Belleville</p>
       </div>
     </header>
@@ -61,7 +61,7 @@
             <div class="step-number">1</div>
             <div class="step-content">
               <img
-                src="images/mobile-screen-button.svg"
+                src="images/icons/mobile-screen-button.svg"
                 alt="Choisir un restaurant"
               />
               <span>Choisissez un restaurant</span>
@@ -70,14 +70,14 @@
           <div class="step">
             <div class="step-number">2</div>
             <div class="step-content">
-              <img src="images/list-ul.svg" alt="Choisir un restaurant" />
+              <img src="images/icons/list-ul.svg" alt="Choisir un restaurant" />
               <span>Composez votre menu</span>
             </div>
           </div>
           <div class="step">
             <div class="step-number">3</div>
             <div class="step-content">
-              <img src="images/store.svg" alt="Choisir un restaurant" />
+              <img src="images/icons/store.svg" alt="Choisir un restaurant" />
               <span>Dégustez au restaurant</span>
             </div>
           </div>
