--- a/index.html
+++ b/index.html
@@ -366,8 +366,30 @@
         </div>
       </section>
     </main>
-    <footer>
-      <p>&copy; 2021 Ohmyfood. Tous droits réservés.</p>
+    <footer class="footer">
+      <div class="logo-container">
+        <span class="logo-container--text">Ohmyfood</span>
+      </div>
+      <div class="footer-links">
+        <a class="footer-link iconed" href="#">
+          <img
+            class="footer-link--icon"
+            src="images/icons/food.svg"
+            alt="Croix icon"
+          />
+          Proposer un restaurant</a
+        >
+        <a class="footer-link iconed" href="#">
+          <img
+            class="footer-link--icon"
+            src="images/icons/partenaire.svg"
+            alt="Croix icon"
+          />
+          Devenir partenaire</a
+        >
+        <a class="footer-link" href="#"> Devenir partenaire</a>
+        <a class="footer-link" href="#"> Contactez-nous </a>
+      </div>
     </footer>
   </body>
 </html>
