feat(logo): add SVG logo for Ohmyfood and update index.html to use it
style(footer): replace text logo with image logo for better aesthetics

style: adjust spacing in layout and components for improved design

--- a/index.html
+++ b/index.html
@@ -367,9 +367,11 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="logo-container">
-        <span class="logo-container--text">Ohmyfood</span>
-      </div>
+      <img
+        class="logo"
+        src="/images/ohmyfood@2xwhite.svg"
+        alt="Logo of Ohmyfood"
+      />
       <div class="footer-links">
         <a class="footer-link iconed" href="#">
           <img
