--- a/index.html
+++ b/index.html
@@ -30,9 +30,6 @@
     <!-- Avec goback -->
     <header class="header header--with-location">
       <div class="header-container header-container--with-goback">
-        <div class="goback-container">
-          <img src="images/icons/GoBack.svg" alt="GoBack icon" />
-        </div>
         <div class="logo-container">
           <img src="images/ohmyfood.svg" alt="Logo of Ohmyfood" />
         </div>
@@ -52,7 +49,9 @@
             Découvrez des restaurants d'exception, sélectionnés par nos soins.
           </p>
         </div>
-        <button class="btn-primary">Explorer nos restaurants</button>
+        <a href="#restaurants"
+          ><button class="btn-primary">Explorer nos restaurants</button></a
+        >
       </section>
       <section class="section-fonctionnement">
         <h2 class="title">Fonctionnement</h2>
@@ -83,7 +82,7 @@
           </div>
         </div>
       </section>
-      <section class="section-restaurants">
+      <section id="restaurants" class="section-restaurants">
         <h2 class="title">Restaurants</h2>
 
         <div class="restaurants-container">
@@ -225,75 +224,80 @@
               <div class="badge">Nouveau</div>
             </div>
           </div>
-          <div class="restaurant-card">
-            <div class="card-content">
-              <div class="card-content-header">
-                <h3>À la française</h3>
-                <p>Cité Rouge</p>
-              </div>
-              <div class="heart-container">
-                <svg
-                  class="heart-stroke"
-                  width="22"
-                  height="21"
-                  viewBox="0 0 22 21"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M12.2206 2.40576L12.2208 2.40551C14.2226 0.15233 17.4035 -0.169451 19.5243 1.80187C22.0186 4.1243 22.156 8.32326 19.9123 10.8492L19.9122 10.8493L11.5978 20.2148C11.2596 20.5956 10.7372 20.5956 10.399 20.2148L2.0848 10.8495C-0.15494 8.32357 -0.0175439 4.1245 2.47664 1.80201C4.59762 -0.169649 7.78271 0.152585 9.77992 2.40514L9.78047 2.40576L10.627 3.35732L11.0005 3.77727L11.3741 3.35732L12.2206 2.40576Z"
-                    stroke="#101010"
-                  />
-                </svg>
-
-                <input type="checkbox" class="heart-clip" />
-
-                <div class="fill">
+          <a href="restaurant/alafrancaise.html">
+            <div class="restaurant-card">
+              <div class="card-content">
+                <div class="card-content-header">
+                  <h3>À la française</h3>
+                  <p>Cité Rouge</p>
+                </div>
+                <div class="heart-container">
                   <svg
-                    class="heart-fill"
+                    class="heart-stroke"
                     width="22"
                     height="21"
                     viewBox="0 0 22 21"
                     fill="none"
                     xmlns="http://www.w3.org/2000/svg"
                   >
-                    <defs>
-                      <linearGradient
-                        id="grad1"
-                        x1="62%"
-                        y1="0%"
-                        x2="38%"
-                        y2="100%"
-                      >
-                        <stop
-                          offset="-11.44%"
-                          style="stop-color: rgb(147, 86, 220); stop-opacity: 1"
-                        />
-                        <stop
-                          offset="123.93%"
-                          style="
-                            stop-color: rgb(255, 121, 218);
-                            stop-opacity: 1;
-                          "
-                        />
-                      </linearGradient>
-                    </defs>
                     <path
                       d="M12.2206 2.40576L12.2208 2.40551C14.2226 0.15233 17.4035 -0.169451 19.5243 1.80187C22.0186 4.1243 22.156 8.32326 19.9123 10.8492L19.9122 10.8493L11.5978 20.2148C11.2596 20.5956 10.7372 20.5956 10.399 20.2148L2.0848 10.8495C-0.15494 8.32357 -0.0175439 4.1245 2.47664 1.80201C4.59762 -0.169649 7.78271 0.152585 9.77992 2.40514L9.78047 2.40576L10.627 3.35732L11.0005 3.77727L11.3741 3.35732L12.2206 2.40576Z"
-                      fill="url(#grad1)"
+                      stroke="#101010"
                     />
                   </svg>
+
+                  <input type="checkbox" class="heart-clip" />
+
+                  <div class="fill">
+                    <svg
+                      class="heart-fill"
+                      width="22"
+                      height="21"
+                      viewBox="0 0 22 21"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <defs>
+                        <linearGradient
+                          id="grad1"
+                          x1="62%"
+                          y1="0%"
+                          x2="38%"
+                          y2="100%"
+                        >
+                          <stop
+                            offset="-11.44%"
+                            style="
+                              stop-color: rgb(147, 86, 220);
+                              stop-opacity: 1;
+                            "
+                          />
+                          <stop
+                            offset="123.93%"
+                            style="
+                              stop-color: rgb(255, 121, 218);
+                              stop-opacity: 1;
+                            "
+                          />
+                        </linearGradient>
+                      </defs>
+                      <path
+                        d="M12.2206 2.40576L12.2208 2.40551C14.2226 0.15233 17.4035 -0.169451 19.5243 1.80187C22.0186 4.1243 22.156 8.32326 19.9123 10.8492L19.9122 10.8493L11.5978 20.2148C11.2596 20.5956 10.7372 20.5956 10.399 20.2148L2.0848 10.8495C-0.15494 8.32357 -0.0175439 4.1245 2.47664 1.80201C4.59762 -0.169649 7.78271 0.152585 9.77992 2.40514L9.78047 2.40576L10.627 3.35732L11.0005 3.77727L11.3741 3.35732L12.2206 2.40576Z"
+                        fill="url(#grad1)"
+                      />
+                    </svg>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="image-wrapper">
-              <img
-                src="images/restaurants/a_la_francaise.jpg"
-                alt="Plat de restaurant"
-              />
-              <!-- <div class="badge">Nouveau</div> -->
-            </div>
-          </div>
+              <div class="image-wrapper">
+                <img
+                  src="images/restaurants/a_la_francaise.jpg"
+                  alt="Plat de restaurant"
+                />
+                <!-- <div class="badge">Nouveau</div> -->
+              </div>
+            </div></a
+          >
           <div class="restaurant-card">
             <div class="card-content">
               <div class="card-content-header">
