--- a/index.html
+++ b/index.html
@@ -60,30 +60,35 @@
         >
       </section>
       <section class="section-fonctionnement">
-        <h2 class="title">Fonctionnement</h2>
-        <div class="steps-container">
-          <div class="step">
-            <div class="step-number">1</div>
-            <div class="step-content">
-              <img
-                src="images/icons/mobile-screen-button.svg"
-                alt="Choisir un restaurant"
-              />
-              <span>Choisissez un restaurant</span>
+        <div class="section-fonctionnement--container">
+          <h2 class="title">Fonctionnement</h2>
+          <div class="steps-container">
+            <div class="step">
+              <div class="step-number">1</div>
+              <div class="step-content">
+                <img
+                  src="images/icons/mobile-screen-button.svg"
+                  alt="Choisir un restaurant"
+                />
+                <span>Choisissez un restaurant</span>
+              </div>
             </div>
-          </div>
-          <div class="step">
-            <div class="step-number">2</div>
-            <div class="step-content">
-              <img src="images/icons/list-ul.svg" alt="Choisir un restaurant" />
-              <span>Composez votre menu</span>
+            <div class="step">
+              <div class="step-number">2</div>
+              <div class="step-content">
+                <img
+                  src="images/icons/list-ul.svg"
+                  alt="Choisir un restaurant"
+                />
+                <span>Composez votre menu</span>
+              </div>
             </div>
-          </div>
-          <div class="step">
-            <div class="step-number">3</div>
-            <div class="step-content">
-              <img src="images/icons/store.svg" alt="Choisir un restaurant" />
-              <span>Dégustez au restaurant</span>
+            <div class="step">
+              <div class="step-number">3</div>
+              <div class="step-content">
+                <img src="images/icons/store.svg" alt="Choisir un restaurant" />
+                <span>Dégustez au restaurant</span>
+              </div>
             </div>
           </div>
         </div>
