style(alafrancaise.html): restructure footer layout and improve styling for better readability and visual organization of footer links

--- a/restaurant/alafrancaise.html
+++ b/restaurant/alafrancaise.html
@@ -296,24 +296,28 @@
         alt="Logo of Ohmyfood"
       />
       <div class="footer-links">
-        <a class="footer-link iconed" href="#">
-          <img
-            class="footer-link--icon"
-            src="../images/icons/food.svg"
-            alt="Croix icon"
-          />
-          Proposer un restaurant</a
-        >
-        <a class="footer-link iconed" href="#">
-          <img
-            class="footer-link--icon"
-            src="../images/icons/partenaire.svg"
-            alt="Croix icon"
-          />
-          Devenir partenaire</a
-        >
-        <a class="footer-link" href="#"> Devenir partenaire</a>
-        <a class="footer-link" href="#"> Contactez-nous </a>
+        <div class="links-icons">
+          <a class="footer-link iconed" href="#">
+            <img
+              class="footer-link--icon"
+              src="../images/icons/food.svg"
+              alt="Croix icon"
+            />
+            Proposer un restaurant</a
+          >
+          <a class="footer-link iconed" href="#">
+            <img
+              class="footer-link--icon"
+              src="../images/icons/partenaire.svg"
+              alt="Croix icon"
+            />
+            Devenir partenaire</a
+          >
+        </div>
+        <div class="links-text">
+          <a class="footer-link" href="#"> Devenir partenaire</a>
+          <a class="footer-link" href="#"> Contactez-nous </a>
+        </div>
       </div>
     </footer>
   </body>
