--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -286,7 +286,7 @@
             </div>
           </div>
         </div>
-        <button class="btn-primary">Explorer nos restaurants</button>
+        <button class="btn-primary">Commander</button>
       </section>
     </main>
     <footer class="footer">
