style: Add loader for better user experience during page load

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     />
   </head>
   <body>
+    <div id="loader" class="loader">
+      <img src="images/icons/spinner.gif" alt="Loading..." />
+    </div>
     <!-- Sans goback 
     <header class="header">
       <div class="header-container">
