--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -114,7 +114,7 @@
             </div>
           </div>
         </div>
-        <div class="menus">
+        <div class="menus menu-animation menu-animation--1">
           <h2 class="menus--title">ENTREES</h2>
           <div class="menu-item">
             <input
@@ -171,7 +171,7 @@
           </div>
         </div>
 
-        <div class="menus">
+        <div class="menus menu-animation menu-animation--2">
           <h2 class="menus--title">PLATS</h2>
           <div class="menu-item">
             <input
@@ -232,7 +232,7 @@
           </div>
         </div>
 
-        <div class="menus">
+        <div class="menus menu-animation menu-animation--3">
           <h2 class="menus--title">DESSERTS</h2>
           <div class="menu-item">
             <input
