--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -114,7 +114,7 @@
             </div>
           </div>
         </div>
-        <div class="menus">
+        <div class="menus menu-animation menu-animation--1">
           <h2 class="menus--title">ENTRÉES</h2>
           <div class="menu-item">
             <input
@@ -194,7 +194,7 @@
           </div>
         </div>
 
-        <div class="menus">
+        <div class="menus menu-animation menu-animation--2">
           <h2 class="menus--title">PLATS</h2>
           <div class="menu-item">
             <input
@@ -253,7 +253,7 @@
           </div>
         </div>
 
-        <div class="menus">
+        <div class="menus menu-animation menu-animation--3">
           <h2 class="menus--title">DESSERTS</h2>
           <div class="menu-item">
             <input
