``` chore(gitignore): ignore style.css.map file - add style.css.map to .gitignore for cleaner project feat(css): center align text in buttons - update button text alignment to center for better UI fix(html): simplify restaurant link markup - remove button element for direct link to improve accessibility style(scss): center align text in component styles - update text alignment in component.scss for consistency ```

--- a/index.html
+++ b/index.html
@@ -58,9 +58,7 @@
             Découvrez des restaurants d'exception, sélectionnés par nos soins.
           </p>
         </div>
-        <a href="#restaurants"
-          ><button class="btn-primary">Explorer nos restaurants</button></a
-        >
+        <a href="#restaurants" class="btn-primary">Explorer nos restaurants</a>
       </section>
       <section class="section-fonctionnement">
         <div class="section-fonctionnement--container">
