fix(footer): update contact link to use mailto - change "Contactez-nous" link to use mailto with the support email - ensure consistency across all restaurant pages

--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -269,7 +269,9 @@
         </div>
         <div class="links-text">
           <a class="footer-link" href="#"> Devenir partenaire</a>
-          <a class="footer-link" href="#"> Contactez-nous </a>
+          <a class="footer-link" href="mailto:contact@ohmyfood.com">
+            Contactez-nous
+          </a>
         </div>
       </div>
     </footer>
