fix(index): update links to use relative paths - change links to restaurants and images for proper relative referencing - improve accessibility and portability of the code

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <h2 class="title">Restaurants</h2>
 
           <div class="restaurants-container">
-            <a href="/restaurants/lapalettedugout.html">
+            <a href="restaurants/lapalettedugout.html">
               <div class="restaurant-card">
                 <div class="card-content">
                   <div class="card-content-header">
@@ -393,7 +393,7 @@
     <footer class="footer">
       <img
         class="logo"
-        src="/images/ohmyfood@2xwhite.svg"
+        src="images/ohmyfood@2xwhite.svg"
         alt="Logo of Ohmyfood"
       />
       <div class="footer-links">
